--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Your Name</title>
+  <title>Portfolio | Your Name</title>
   <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
@@ -23,12 +23,25 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>About Me</h1>
+      <h1>Portfolio</h1>
 
-      <img src="assets/max.jpg" class="auth-image" alt="Your Name">
+      <div class="work">
+        <img src="assets/sports-q-c-640-480-2.jpg" alt="surf">
 
-      <p>Hey my name is Max. I'm majoring in English at The University of Texas and studying web development through a coding bootcamp. 
-        I live with my cat Squiggle and DJ for fun. I'm a huge music nerd, don't get me started.</p>
+        <h3>Word Guess</h3>
+      </div>
+      <div class="work">
+        <img src="assets/sports-q-c-640-480-3.jpg" alt="bike">
+
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/sports-q-c-640-480-9.jpg" alt="track">
+
+        <h3>Trivia Game</h3>
+      </div>
+      
+      </div>
 
     </section>
 
@@ -36,7 +49,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      Copyright &copy;
     </div>
   </footer>
 </body>
