--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
+        <a href="unit-4-game/index.html">Games</a>
       </nav>
     </div>
   </header>
